--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
             </nav>
-            
+            Butthole Surfers
         <script src="js/script.js"></script>
         </body>
 </html>
